[package]
name = "taskcluster"
version = "0.1.0"
authors = ["Wander Lairson Costa <wander.lairson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.10"
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rust-crypto = "^0.2"
base64 = "^0.11"
chrono = "^0.4"
failure = "^0.1"
