[package]
name = "taskcluster"
version = "0.1.0"
authors = ["Wander Lairson Costa <wander.lairson@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.10.4"
uuid = { version = "0.8.1", features = ["v4"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rust-crypto = "0.2.36"
base64 = "0.12.0"
chrono = "0.4.11"
failure = "0.1.7"
hawk = "3.1.0"
backoff = "0.1.6"
async-std = "1.1.0"

[dev-dependencies]
mockito = "0.23.3"
tokio = { version = "0.2", features = ["macros"] }
